# harmony-rs

./: .gitignore  .gitmodules  README.md
chapter10/src/: main.rs
chapter11/crates/custom_macro/: Cargo.toml
chapter11/crates/custom_macro/src/: lib.rs
chapter11/crates/macro_example/: Cargo.toml
chapter11/crates/macro_example/src/: custom.rs  inner.rs  main.rs
chapter12/: Cargo.toml
chapter12/src/: closure.rs  main.rs  mutex_arc.rs  simple_code.rs
chapter13/crates/hello/: Cargo.toml
chapter13/crates/hello/third_c/: add.h  hello.c  libhello.dylib
chapter13/crates/run_c/: Cargo.toml  build.rs
chapter13/crates/run_c/src/: main.rs
chapter13/crates/run_c/third_c/: libadd.dylib
chapter14/: .gitignore  oh-package.json5
chapter14/AppScope/: app.json5
chapter14/clion_test/: CMakeLists.txt  README.md  hello.cpp
chapter15/crates/sys/src/: lib.rs
chapter16/: Cargo.toml
chapter16/crates/api/: Cargo.toml  build.rs
chapter16/crates/api/src/: lib.rs
chapter17/: Cargo.toml
chapter17/crates/api/: Cargo.toml  build.rs
chapter17/crates/backend/: Cargo.toml
chapter18/node_uv/: index.d.ts  index.js  package.json  server.js
chapter18/node_uv/src/: lib.rs
chapter18/node_worker/: index.js  package.json  worker.js
chapter2/: oh-package.json5
chapter20/basic/cpp/: README.md  main.c
chapter20/basic/rs_size/: Cargo.toml
chapter20/rs_size/: Cargo.toml
chapter20/rs_size/src/: main.rs
chapter20/size/: oh-package.json5
chapter20/size/AppScope/: app.json5
chapter20/size/entry/: oh-package.json5
chapter20/size/rs/: Cargo.toml
chapter20/size/rs/crates/api/: Cargo.toml
chapter20/size/rs/crates/api/scripts/: aarch64-unknown-linux-ohos-clang.sh
chapter20/size/rs/crates/api/src/: lib.rs  register.rs  value.rs
chapter23/android/: settings.gradle
chapter23/android/app/: build.gradle
chapter23/ios/includes/: helloios.h  irs.h
chapter23/ios/ios/: ContentView.swift  Item.swift  iosApp.swift
chapter23/ios/ios.xcodeproj/: project.pbxproj
chapter23/rs/: Cargo.toml
chapter24/crc32/: Cargo.toml
chapter24/crc32/src/: lib.rs
chapter24/fib/: Cargo.toml
chapter24/fib/src/: lib.rs
chapter24/jieba/: Cargo.toml  build.rs
chapter24/jieba/src/: lib.rs
chapter24/mmkv/: .gitignore  Cargo.toml  build.rs  wraper.cpp  wrapper.cpp
chapter24/mmkv/.cargo/: config.toml
chapter24/mmkv/scripts/: aarch64-unknown-linux-ohos-clang++.sh  aarch64-unknown-linux-ohos-clang.sh  armv7-unknown-linux-ohos-clang++.sh  armv7-unknown-linux-ohos-clang.sh  x86_64-unknown-linux-ohos-clang++.sh  x86_64-unknown-linux-ohos-clang.sh
chapter24/mmkv/src/: lib.rs  sys.rs
chapter24/mmkv_harmony/entry/: oh-package.json5
chapter3/: oh-package.json5
chapter3/AppScope/: app.json5
chapter5/: build-profile.json5  oh-package.json5
chapter5/AppScope/: app.json5
chapter5/entry/: patch.json
chapter6/: Cargo.toml
chapter6/src/: main.rs
chapter7/: Cargo.toml
chapter7/src/: basic.rs  data.rs  logic.rs  main.rs  match_logic.rs  simple_module.rs
chapter7/src/folder_module/: util.rs
chapter8/: Cargo.toml
chapter8/src/: copy_clone.rs  main.rs  owner.rs
chapter9/: Cargo.toml
chapter9/src/: example.rs  main.rs
(+63 files in other folders)
