[package]
name    = "crc32"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-ohos        = { version = "*" }
napi-derive-ohos = { version = "*" }
crc32c       = { version = "0.6" }
crc32fast    = { version = "1.3", features = ["nightly"] }

[build-dependencies]
napi-build-ohos = { version = "*" }
