[package]
name    = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-ohos        = { path = "/Users/ranger/Desktop/project/ohos-rs/ohos-rs/crates/napi" }
napi-derive-ohos = { path = "/Users/ranger/Desktop/project/ohos-rs/ohos-rs/crates/macro" }
cxx ="1.0"

[build-dependencies]
napi-build-ohos = { version = "*" }
cc = "1.0.83"
cxx-build="1.0"
walkdir = "2"