[package]
name = "size"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ['cdylib']

[dependencies]
sys = { path = '../sys' }
backend = { path = '../backend' }
ctor = "0.2.6"
once_cell = "1.19.0"
